--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cros": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0"
   }
 }
